# report-tool-rs

./: .gitignore  20210404_141906849370398.xlsx  20210404_142258769629233.xlsx  20210404_142316435175928.xlsx  20210404_143755744890994.xlsx  20210404_144236869593932.xlsx  20210404_144251981760623.xlsx  20210404_144333551512993.xlsx  20210404_144348690621986.xlsx  Cargo.toml  input.csv  meta.json  rustfmt.toml
old/: input.csv
src/: lib.rs  main.rs
src/ds/: config.rs  data.rs  ds_private.rs  ds_validation.rs  field.rs  meta.rs  mod.rs  places.rs  table.rs
src/ds/data/: computed.rs  enums.rs  input_record.rs  mod.rs
src/ds/data/enums/: mod.rs  places.rs
src/errors/: mod.rs
src/helpers/: mod.rs  strings.rs
src/tests/: dropdown.json  ds_test.rs  input.csv  input_test.csv  meta_test.json  mod.rs  parse_input_test.rs  static_fields_test.rs  table_test.rs
src/writer/: mod.rs
