[package]
name = "report-tool"
version = "0.1.0"
authors = ["faisal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
num = "0.3"
indexmap = "1.6.1"
xlsxwriter = "0.3.2"
time-graph = "0.1.1"

[dependencies.hashbrown]
version = "0.9.1"
features = ["serde"]