[package]
name = "report-tool"
version = "0.6.1"
authors = ["faisal"]
description = "Report generation tool that takes an input as CSV and metadata regarding the input as json."
edition = "2018"
repository = "https://github.com/ArisaftechFaisal/report-tool-rs"

[lib]
crate-type = ["rlib", "dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.89"
csv = "1.1.6"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
num = "0.3"
indexmap = "1.6.1"
xlsxwriter = "0.3.2"
convert_case = "0.1.0"

[dependencies.hashbrown]
version = "0.9.1"
features = ["serde"]